--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -12,12 +12,10 @@ jobs:
     runs-on: macos-latest
     
     env:
-      CFLAGS: "-I/usr/local/opt/openssl/include/"
-      LDFLAGS: "-L/usr/local/opt/openssl/lib/"
+      CFLAGS: "-I/usr/local/ssl/include/"
+      LDFLAGS: "-L/usr/local/ssl/lib/"
     
     steps:
     - uses: actions/checkout@v2
     - name: make
       run: make
-    - name: openssl
-      run: find /usr -type f -name md5.h
